# avenor

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.venv2/: pyvenv.cfg
.venv_local/: pyvenv.cfg
src/avenor/: cli.py  config.py  db.py  main.py  models.py
src/avenor.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/avenor/collectors/: __init__.py  git.py  github.py
src/avenor/services/: __init__.py  metrics.py  repositories.py  sync.py
src/avenor/tasks/: __init__.py  celery_app.py  collection.py
src/avenor/web/: __init__.py  app.py
src/avenor/web/static/: app.js  styles.css
src/avenor/web/templates/: base.html  contributions.html  contributors.html  home.html  repo_codebase.html  repo_contributions.html  repo_contributors.html  repo_issues.html  repo_overview.html  repo_prs.html  settings.html
src/avenor/web/templates/partials/: period_selector.html
tests/: conftest.py  test_core.py  test_metrics.py  test_web.py
