[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "avenor"
version = "0.1.0"
description = "Unified git analytics and visualization workspace"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dash~=3.2",
    "dash-bootstrap-components~=2.0",
    "dash-mantine-components~=2.2",
    "fastapi>=0.115,<1.0",
    "httpx>=0.27,<1.0",
    "jinja2>=3.1,<4.0",
    "pandas~=2.3",
    "plotly>=6.0,<7.0",
    "python-multipart>=0.0.9,<1.0",
    "requests~=2.32",
    "sqlalchemy>=2.0.30,<3.0",
    "typer>=0.12,<1.0",
    "uvicorn>=0.30,<1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
]

[project.scripts]
avenor = "avenor.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
