[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "avenor"
version = "0.2.0"
description = "Unified open-source analytics platform — collection, storage, and visualization in one project"
readme = "README.md"
license = "MIT"
authors = [
    {name = "Ashish"},
]
requires-python = ">=3.11"
dependencies = [
    "celery[redis]>=5.4,<6.0",
    "redis>=5.0,<6.0",
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.30,<1.0",
    "sse-starlette>=2.0,<3.0",
    "httpx>=0.27,<1.0",
    "jinja2>=3.1,<4.0",
    "plotly>=6.0,<7.0",
    "pandas>=2.1,<3.0",
    "python-multipart>=0.0.9,<1.0",
    "sqlalchemy>=2.0.30,<3.0",
    "typer>=0.12,<1.0",
    "psycopg2-binary>=2.9,<3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-asyncio>=0.23,<1.0",
]

[project.scripts]
avenor = "avenor.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"avenor.web" = ["templates/**/*.html", "static/**/*"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
